Fix menu on tablet screen

--- a/src/stylesheets/components/_menu.scss
+++ b/src/stylesheets/components/_menu.scss
@@ -44,6 +44,7 @@
 	top: 50%;
 	transform: translate(-50%, -50%);
 	max-width: 100%;
+
 	@media (min-width: breakpoint('tablet')) {
 		left: 0;
 		top: 0;
@@ -63,6 +64,7 @@
 	background-position: 50% 50%;
 	transition-property: background-size;
 	transition-duration: 0.8s;
+
 	@media screen and (min-width: breakpoint('wide')) {
 		background-size: 186px 54px;
 	}
@@ -98,53 +100,51 @@
 }
 
 .menu-wrap {
-	position: absolute;
-	margin-top: 0.25em;
-	text-align: center;
+	opacity: 0;
+	max-height: 0;
 	overflow: hidden;
+	transition-property: max-height;
+	transition-duration: 0.6s;
+
+	&.show {
+		top: $menu-height;
+		margin: 0;
+		opacity: 9;
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+		width: 100%;
+		max-height: 1000px;
+		position: absolute;
+		padding-top: 1em;
+		padding-bottom: 1.5em;
+		max-height: auto;
+		right: 0;
+		left: 0;
+		background-color: palette('blue');
+	}
+
 
 	@media screen and (min-width: breakpoint('tablet')) {
+		right: 0;
+		position: absolute;
+		margin-top: 0.25em;
+		text-align: center;
+		opacity: 1;
+		overflow: hidden;
+		max-height: 100%;
 		transform: translateY(-50%);
 		top: 50%;
-	}
-
-	@media (max-width: breakpoint('tablet')) {
-		opacity: 0;
-		max-height: 0;
-		overflow: hidden;
-		transition-property: max-height;
-		transition-duration: 0.6s;
-
-		&.show {
-			top: $menu-height;
-			margin: 0;
-			opacity: 9;
-			display: block;
-			margin-left: auto;
-			margin-right: auto;
-			width: 100%;
-			max-height: 1000px;
-			position: absolute;
-			padding-top: 1em;
-			padding-bottom: 1.5em;
-			max-height: auto;
-			right: 0;
-			left: 0;
-			background-color: palette('blue');
-		}
-	}
-
-	@media (min-width: breakpoint('tablet')) {
-		right: 0;
+		transition-property: none;
 	}
 }
 
 .main-menu button {
-	display: none;
-	outline: none;
+	display: block;
 
-	@media (max-width: breakpoint('tablet')) {
-		display: block;
+	@media screen and (min-width: breakpoint('tablet')) {
+		display: none;
+		outline: none;
 	}
 }
 
